--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,12 +1,27 @@
+body {
+  padding-top: 50px;
+}
+
+.container {
+  text-align: center;
+}
+
 #wrapper {
-  width: 475px;
-  height: 171px;
-  margin: 100px auto;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  padding: 40px 15px;
 }
 
 #countdown {
-  font-family: 'Black Ops One', cursive;
-  font-size: 90px;
+  font-size: 125px;
+  font-weight: 700;
+}
+
+#controls {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 button.thoughtbot {
