--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,12 @@
-<div id="wrapper">
-    <div id="countdown"></div>
-    <button id="start" class="thoughtbot">Start</button>
-    <button id="stop" class="thoughtbot">Stop</button>
-    <button id="reset" class="thoughtbot">Reset</button>
+<div class="container">
+    <div id="wrapper">
+        <div id="countdown"></div>
+        <input type="text" id="startAt" value="000000">
+        <input type="text" id="endAt" value="000000">
+        <input type="button" id="set" value="Set">
+    </div>
+    <div id="controls">
+        <button id="reset" class="thoughtbot">Reset</button>
+        <button id="toggle" class="thoughtbot">Start</button>
+    </div>
 </div>
