--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,22 +6,25 @@ body {
   text-align: center;
 }
 
-#wrapper {
-  width: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 10px;
-  padding: 40px 15px;
+.buttons {
+  margin-top: 50px;
 }
 
 #countdown {
   font-size: 125px;
   font-weight: 700;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px 15px 0;
 }
 
 #controls {
-  margin-top: 15px;
   margin-bottom: 15px;
+}
+
+#controls input {
+  margin: 0 2px;
 }
 
 button.thoughtbot {
@@ -46,6 +49,7 @@ button.thoughtbot {
   text-align: center;
   text-shadow: 0px -1px 1px rgba(0, 0, 0, 0.8);
   width: 150px;
+  margin: 2px ;
 }
 
 button.thoughtbot:hover {
